added basic features in front and ajust backend
